[project]
name = "ted"
version = "0.1.0"
description = "TED data collection and postprocessing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
    "ruff>=0.12.7",
    "pandas>=2.3.1",
    "rapidfuzz>=3.13.0",
    "msal>=1.33.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
